# chunker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  infer_vllm.py  prompt.txt  pyproject.toml  train_sft.py
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: export.py  infer.py  ingest.py  projects.py  records.py
backend/app/services/: pipeline.py
backend/tests/: test_api_persistence.py  test_batch_upload_pairing.py  test_chunker_core.py  test_connection_leak.py  test_rechunking.py  test_reinfer.py  test_text_cleanup.py  test_translation.py  test_windowed_predict.py
chunker_core/: __init__.py  batch_upload.py  llm.py  parsing.py  prompts.py  rechunking.py  splitter.py  text_cleanup.py  translation.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/: root.tsx  styles.css
frontend/app/components/: AlignmentEditor.tsx  ChunkCard.tsx  ConfirmDialog.tsx  Dialog.tsx  HelpOverlay.tsx  MobileActionBar.tsx  MobileSegmentView.tsx  ModelDiffBanner.tsx  ThemeToggle.tsx  Toolbar.tsx  VisuallyHidden.tsx
frontend/app/lib/: alignment.boundary.test.ts  alignment.ts  api.ts  types.ts  useFocusTrap.ts  useHistory.ts  useHotkeys.ts
frontend/app/routes/: _index.tsx  projects.$slug._index.tsx  projects.$slug.records.$id.tsx  projects.$slug.upload.tsx
scripts/: serve.sh
