[project]
name = "chunker-core"
version = "0.1.0"
description = "Shared helpers for the Chunky bitext chunking model (parsing, prompts, splitter, vLLM client)"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
splitter = ["wtpsplit>=2.0", "transformers>=4.40", "huggingface-hub>=0.24", "onnxruntime>=1.17"]
embedded = ["vllm>=0.6", "transformers>=4.40"]

[tool.hatch.build.targets.sdist]
include = ["/chunker_core"]

[tool.hatch.build.targets.wheel]
packages = ["chunker_core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
