[project]
name = "chunker-backend"
version = "0.1.0"
description = "FastAPI postprocessing backend for the Chunky bitext chunking model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "googletrans>=4.0.0",
]

[project.optional-dependencies]
splitter = ["wtpsplit>=2.0", "transformers>=4.40", "huggingface-hub>=0.24", "onnxruntime>=1.17"]
dev = ["pytest>=8.0"]

[tool.uv.sources]
chunker-core = { path = "..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
